# core

./: CMakeLists.txt  LICENSE.md  README.md  buildspec.yml  linuxBuild.sh
assets/scenario/scenario/: test.scenario
assets/scene/scene/: graph.map
protocol/ospl/agent/: agent.idl
protocol/ospl/server/: server.idl
protocol/proto/common/: header.proto  location.proto  pose.proto
protocol/proto/communication/request/agent/: agent.proto
protocol/proto/task/: task.proto
scripts/: installLocal.sh  installServer.sh  rabbitmq_server_install.sh  sendWCSCommand.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/application/: AppStat.h  Application.h  CrashHandler.cpp  CrashHandler.h
src/core/configManager/: Config.cpp  Config.h  ConfigElement.cpp  ConfigElement.h  ConfigManager.cpp  ConfigManager.h
src/core/configManager/configParser/: ConfigParser.cpp  ConfigParser.h  ConfigParserTypes.h  ConfigParserXML.cpp  ConfigParserXML.h  ConfigParserYAML.h
src/core/conversion/: Convert.cpp  Convert.h
src/core/core/: BoundedVariable.h  Color.h  Core.h  CoreDetail.h  Debug.h  JoystickCodes.h  KeyCodes.h  Locale.h  MacroExpansions.h  Memory.h  MouseCodes.h  NamedType.h  NamedTypeAddon.h  Profiler.cpp  Profiler.h  Random.cpp  Random.h  RawPointer.h  SimpleSingleton.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  Time.cpp  Time.h  Types.cpp  Types.h  Utils.cpp  Utils.h  Uuid.cpp  Uuid.h  crtp.h  tinyfsm.hpp
src/core/coreTest/: CMakeLists.txt  TestFixture.h  TestMgr.cpp  TestMgr.h
src/core/coreUnitTests/: CMakeLists.txt  CoreUnitTests.cpp  TestBoundedVariable.cpp  TestParameterManager.cpp
src/core/examples/: CMakeLists.txt
src/core/examples/UuidExample/: UuidExample.cpp
src/core/examples/configExample/: ConfigExample.cpp
src/core/examples/parameterExample/: ParameterExample.cpp
src/core/examples/plottingExample/: AnimatedLine.cpp  CMakeLists.txt
src/core/file/: CSVWriter.h  ConfigPath.h.in  FilePath.cpp  FilePath.h  FileUtils.cpp  FileUtils.h  dirent.h  tinyxml2.h
src/core/math/: Math.h  WrapToPi.h
src/core/system/: SystemStats.cpp  SystemStats.h
src/graph/: CMakeLists.txt
src/graph/graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphParser.cpp  GraphParser.h  Node.cpp  Node.h  NodeCluster.cpp  NodeCluster.h
src/graph/graph/shortestPath/: Dijkstra.cpp  Dijkstra.h  NetworkFlow.cpp  NetworkFlow.h  ShortestPathBase.h
src/graph/graphUnitTests/: CMakeLists.txt  TestGraph.cpp  TestParser.cpp
src/graph/utils/: GraphUtils.cpp  GraphUtils.h
